test/corpus/activity/02_decisions.txt
===========================
Simple if-then-else
===========================
@startuml
if (Condition?) then
  :Action A;
else
  :Action B;
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (decision_node
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))
        (else_branch
          (activity_element
            (activity_node
              label: (activity_label
                (text_line)))))))
    (enduml_directive)))

===========================
If-then without else
===========================
@startuml
if (Check?) then
  :Do something;
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (decision_node
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))))
    (enduml_directive)))

===========================
If-elseif-else chain
===========================
@startuml
if (x < 0) then
  :Negative;
elseif (x == 0) then
  :Zero;
else
  :Positive;
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (decision_node
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))
        (elseif_branch
          condition: (condition_expression)
          (activity_element
            (activity_node
              label: (activity_label
                (text_line)))))
        (else_branch
          (activity_element
            (activity_node
              label: (activity_label
                (text_line)))))))
    (enduml_directive)))

===========================
Decision without labels
===========================
@startuml
if (Ready?) then
  :Start;
else
  :Wait;
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (decision_node
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))
        (else_branch
          (activity_element
            (activity_node
              label: (activity_label
                (text_line)))))))
    (enduml_directive)))

===========================
Nested decisions
===========================
@startuml
if (Outer?) then
  if (Inner?) then
    :Nested action;
  endif
else
  :Other action;
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (decision_node
        condition: (condition_expression)
        (activity_element
          (decision_node
            condition: (condition_expression)
            (activity_element
              (activity_node
                label: (activity_label
                  (text_line))))))
        (else_branch
          (activity_element
            (activity_node
              label: (activity_label
                (text_line)))))))
    (enduml_directive)))
