test/corpus/activity/03_loops.txt
===========================
While loop
===========================
@startuml
while (Has items?)
  :Process item;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))))
    (enduml_directive)))

===========================
While loop with body
===========================
@startuml
while (condition?)
  :Action 1;
  :Action 2;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))))
    (enduml_directive)))

===========================
Nested while loops
===========================
@startuml
while (outer?)
  while (inner?)
    :Nested action;
  endwhile
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition_expression)
        (activity_element
          (while_loop
            condition: (condition_expression)
            (activity_element
              (activity_node
                label: (activity_label
                  (text_line))))))))
    (enduml_directive)))

===========================
While with if inside
===========================
@startuml
while (continue?)
  if (check?) then
    :Do something;
  endif
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition_expression)
        (activity_element
          (decision_node
            condition: (condition_expression)
            (activity_element
              (activity_node
                label: (activity_label
                  (text_line))))))))
    (enduml_directive)))

===========================
Simple while loop
===========================
@startuml
while (ready?)
  :wait;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition_expression)
        (activity_element
          (activity_node
            label: (activity_label
              (text_line))))))
    (enduml_directive)))
